<resources>
    <string name="app_name" translatable="false">EBT New Note</string>
    <string name="crash_text">${app_name} has crashed\nSend a report to the developer</string>
    <string name="crash_email_address" translatable="false">"marv42+ebtnn-acra@gmail.com"</string>
    <string name="submit_fragment_title">New Note</string>
    <string name="results_fragment_title">Results</string>
    <string name="no_data">This is where the results of your note data submissions will appear</string>
    <string name="hello">Hello</string>
    <string name="note">Note</string>
    <plurals name="xNotes">
        <item quantity="one">Note</item>
        <item quantity="other">%d notes</item>
    </plurals>
    <string name="hit">Hit</string>
    <plurals name="xHits">
        <item quantity="one">A hit</item>
        <item quantity="other">%d hits</item>
    </plurals>
    <string name="edit_data">edit for resubmission</string>
    <string name="show_in_browser">show on EBT web site</string>
    <string name="keep">keep this note</string>
    <string name="dont_keep">don\'t keep this note</string>
    <string name="expand_all">expand all</string>
    <string name="collapse_all">collapse all</string>
    <string name="insertion">Insertion</string>
    <string name="submitting">Submitting data to EBT…</string>
    <string name="failed">failed</string>
    <string name="successful">successful</string>
    <string name="sent">sent</string>
    <string name="total">Total</string>
    <string name="http_error">Error communicating to the server</string>
    <string name="trying_again">Trying again</string>
    <string name="server_error">Unusable response from the server</string>
    <string name="ocr_error">OCR error</string>
    <string name="error_no_connection">Insufficient internet connection contacting</string>
    <string name="response_code">HTTP status code</string>
    <string name="no_json">Not in valid JSON format</string>
    <string name="internal_error">Internal error</string>
    <string name="has_been_entered">Note entered into the system</string>
    <string name="got_hit">Congratulations! You have got a hit. This note has already been entered</string>
    <string name="invalid_denomination">Invalid denomination</string>
    <string name="invalid_country">Invalid country</string>
    <string name="no_serial_number">No serial number</string>
    <string name="no_short_code">No short code</string>
    <string name="invalid_serial_number">Invalid serial number</string>
    <string name="invalid_short_code">Invalid short code</string>
    <string name="city_missing">No city or postal code</string>
    <string name="already_entered">You have already entered this note</string>
    <string name="already_entered_serial_number">You have already entered this serial number</string>
    <string name="inconsistent">Serial number or printer code invalid for this denomination</string>
    <string name="city">City</string>
    <string name="city_hint">e.g. Berlin</string>
    <string name="country">Country</string>
    <string name="country_hint">e.g. Germany</string>
    <string name="postal_code">Postal Code</string>
    <string name="postal_code_hint">e.g. 10557</string>
    <string name="get_location">get the current location from the device</string>
    <string name="denomination">Denomination</string>
    <string name="eur5" translatable="false">5 €</string>
    <string name="eur10" translatable="false">10 €</string>
    <string name="eur20" translatable="false">20 €</string>
    <string name="eur50" translatable="false">50 €</string>
    <string name="eur100" translatable="false">100 €</string>
    <string name="eur200" translatable="false">200 €</string>
    <string name="eur500" translatable="false">500 €</string>
    <string name="short_code">Short Code</string>
    <string name="short_code_hint">e.g. A123B4 (or C5D6)</string>
    <string name="serial_number">Serial Number</string>
    <string name="serial_number_hint">e.g. AB1234567890</string>
    <string name="comment">Comment</string>
    <string name="comment_hint">e.g.: Where did you get the note from? …</string>
    <string name="keep_short_code">Keep Short Code</string>
    <string name="submit">Submit Data to EBT</string>
    <string name="acquire">take a photo and acquire the values</string>
    <string name="no_comment_suggestions">No comment suggestions</string>
    <string name="comment_suggestions_error">Error getting comment suggestions</string>
    <string name="comment_suggestions_set">Comment suggestions set</string>
    <string name="settings">Settings</string>
    <string name="settings_category_ebt_account">EBT account settings</string>
    <string name="settings_ebt_account_summary">Don\'t have a EuroBillTracker account yet?\nTap here to create one</string>
    <string name="ebt_url" translatable="false">https://en.eurobilltracker.com/</string>
    <string name="create_ebt_account_url" translatable="false">${ebt_url}signup/</string>
    <string name="invalid_login">Invalid login</string>
    <string name="settings_email_title">Email address</string>
    <string name="settings_email_summary">Email address to log in to your EBT account</string>
    <string name="settings_currently">, currently:</string>
    <string name="settings_currently_not_set">, currently not set</string>
    <string name="settings_password_title">Password</string>
    <string name="settings_password_summary">Password of your EBT account</string>
    <string name="settings_category_ocr">OCR settings</string>
    <string name="settings_ocr_summary">In order to analyze the photos, OCR (optical character recognition) is used.\nThe OCR can be executed on the device or alternatively an online OCR service can be used</string>
    <string name="settings_ocr_online_title">Use an online OCR service</string>
    <string name="settings_ocr_service_key_title">Online OCR service key</string>
    <string name="settings_ocr_service_key_summary">The online OCR service requires a service key</string>
    <string name="settings_ocr_postpone_title">Postpone online OCR on connectivity failure</string>
    <string name="settings_ocr_postpone_summary">If the communication with the online OCR service fails, wait for connectivity in the background and send the data again when available</string>
    <string name="settings_category_display">Display settings</string>
    <string name="settings_images_title">Denomination images</string>
    <string name="settings_images_summary">Show EBT denomination images in the \'${results_fragment_title}\' tab instead of denomination text</string>
    <string name="settings_category_advanced">Experimental settings</string>
    <string name="settings_comment_title">Additional comment</string>
    <string name="settings_comment_summary">This text is added to the end of every comment you submit</string>
    <string name="settings_submitted_title">Number of notes</string>
    <string name="settings_submitted_summary">Maximum number of notes to display in the \'${results_fragment_title}\' tab</string>
    <string name="settings_category_misc">Miscellaneous settings</string>
    <string name="settings_country_title">Country resolution service key</string>
    <string name="settings_country_summary">In order to resolve the country name, an online API service is used</string>
    <string name="redirect_to_settings">\n\nYou are being redirected to the settings</string>
    <string name="get_ocr_key">${redirect_to_settings} to enter/get an OCR service key.</string>
    <string name="settings_ocr_summary_no_key">Please tap here to get your personal OCR service key at</string>
    <string name="settings_ocr_service_url" translatable="false">https://ocr.space/ocrapi#free</string>
    <string name="settings_country_summary_no_key">Please tap here to get your personal country resolution service key at</string>
    <string name="settings_country_service_url" translatable="false">https://manage.countrylayer.com/</string>
    <string name="logged_in">Login successful</string>
    <string name="trying_login">Trying to log in to EBT…</string>
    <string name="wrong_login_info">No valid EBT login information</string>
    <string name="max_show_num_default" translatable="false">100</string>
    <string name="max_retries_default" translatable="false">5</string>
    <string name="pref_settings_email_key" translatable="false">pref_settings_email</string>
    <string name="pref_settings_password_key" translatable="false">pref_settings_password</string>
    <string name="pref_settings_comment_key" translatable="false">pref_settings_comment</string>
    <string name="pref_settings_ocr_online_key" translatable="false">pref_settings_ocr_online</string>
    <string name="pref_settings_ocr_service_key" translatable="false">pref_settings_ocr_service</string>
    <string name="pref_settings_ocr_postpone_key" translatable="false">pref_settings_ocr_postpone</string>
    <string name="pref_settings_country_key" translatable="false">pref_settings_country</string>
    <string name="pref_settings_images_key" translatable="false">pref_settings_images</string>
    <string name="pref_settings_show_submitted_key" translatable="false">pref_settings_show_submitted</string>
    <string name="pref_settings_max_retries_key" translatable="false">pref_settings_retries</string>
    <string name="pref_country_key" translatable="false">pref_country</string>
    <string name="pref_city_key" translatable="false">pref_city</string>
    <string name="pref_postal_code_key" translatable="false">pref_postal_code</string>
    <string name="pref_denomination_key" translatable="false">pref_denomination</string>
    <string name="pref_short_code_key" translatable="false">pref_short_code</string>
    <string name="pref_serial_number_key" translatable="false">pref_serial_number</string>
    <string name="pref_comment_key" translatable="false">pref_comment</string>
    <string name="pref_login_values_ok_key" translatable="false">pref_login_values_ok</string>
    <string name="pref_results_key" translatable="false">pref_results</string>
    <string name="pref_photo_path_key" translatable="false">pref_photo_path</string>
    <string name="pref_photo_uri_key" translatable="false">pref_photo_uri</string>
    <string name="no_permission">Permissions not granted</string>
    <string name="permission_camera">Camera permission granted</string>
    <string name="permission_location">Location permission granted</string>
    <string name="no_camera_activity">No activity for taking pictures</string>
    <string name="processing">Photo is being processed…</string>
    <string name="ocr_return">Photo processing result set</string>
    <string name="content_in_clipboard">Overwritten content is in the clipboard now</string>
    <string name="ocr_dialog_title">Character Recognition Result</string>
    <string name="ocr_dialog_empty">Nothing found</string>
    <string name="location">Location</string>
    <string name="location_none">No location information available</string>
    <string name="location_not_enabled">Location is not enabled</string>
    <string name="location_please_enable">Please enable location in the system settings</string>
    <string name="location_no_gps">Fine location is not enabled\nConsider activating GPS</string>
    <string name="location_start">Gathering location information…</string>
    <string name="location_got">Got a current location</string>
    <string name="location_last_known">Got the last known location</string>
    <string name="location_no_provider">No Location Provider is enabled\nCould not transform latitude/longitude into postal address</string>
    <string name="location_no_address">Geocoder didn\'t get an address for this location</string>
    <string name="location_no_country">Country resolution failed</string>
    <string name="about">About</string>
    <string name="licenses">Licenses</string>
</resources>