<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:scrollbars="none">
    <LinearLayout
        android:orientation="vertical"
        android:scrollbars="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <!--android:layout_margin="20dp"-->
        <android.support.v7.widget.AppCompatTextView
            android:text="@string/location"
            android:textAllCaps="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center" />
        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:stretchColumns="1">
            <TableRow>
                <android.support.v7.widget.AppCompatTextView
                    android:text="@string/country" />
                <!-- AutoCompleteTextView  -->
                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/edit_text_country"
                    android:singleLine="true"
                    android:nextFocusDown="@+id/edit_text_city"
                    android:autofillHints="e.g. Germany" />
            </TableRow>
            <TableRow>
                <android.support.v7.widget.AppCompatTextView
                    android:text="@string/city" />
                <!-- AutoCompleteTextView  -->
                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/edit_text_city"
                    android:singleLine="true"
                    android:nextFocusDown="@+id/edit_text_zip"
                    android:autofillHints="e.g. Berlin" />
            </TableRow>
            <TableRow>
                <android.support.v7.widget.AppCompatTextView
                    android:text="@string/postal_code" />
                <!-- AutoCompleteTextView  -->
                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/edit_text_zip"
                    android:singleLine="true"
                    android:inputType="textPostalAddress"
                    android:nextFocusDown="@+id/edit_text_printer"
                    android:autofillHints="e.g. 10557" />
            </TableRow>
        </TableLayout>
        <android.support.v7.widget.AppCompatImageButton
            android:id="@+id/location_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@android:drawable/ic_menu_mylocation"
            android:contentDescription="@string/location" />
        <android.support.v7.widget.AppCompatTextView
            android:text="@string/note"
            android:textAllCaps="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center" />
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <android.support.v7.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/value" />
            <RadioGroup
                android:id="@+id/radio_group_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <android.support.v7.widget.AppCompatRadioButton
                    android:id="@+id/radio_5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/eur5" />
                <android.support.v7.widget.AppCompatRadioButton
                    android:id="@+id/radio_10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/eur10" />
                <android.support.v7.widget.AppCompatRadioButton
                    android:id="@+id/radio_20"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/eur20" />
                <android.support.v7.widget.AppCompatRadioButton
                    android:id="@+id/radio_50"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/eur50" />
            </RadioGroup>
            <RadioGroup
                android:id="@+id/radio_group_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <android.support.v7.widget.AppCompatRadioButton
                    android:id="@+id/radio_100"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/eur100" />
                <android.support.v7.widget.AppCompatRadioButton
                    android:id="@+id/radio_200"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/eur200" />
                <android.support.v7.widget.AppCompatRadioButton
                    android:id="@+id/radio_500"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/eur500" />
            </RadioGroup>
        </LinearLayout>
        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TableRow>
                <android.support.v7.widget.AppCompatTextView
                    android:text="@string/short_code" />
                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/edit_text_printer"
                    android:singleLine="true"
                    android:inputType="textCapCharacters"
                    android:width="@dimen/short_code_text_size"
                    android:nextFocusDown="@+id/edit_text_serial"
                    android:autofillHints="@string/short_code" /><!-- width has no effect because of table -->
            </TableRow>
            <TableRow>
                <android.support.v7.widget.AppCompatTextView
                    android:text="@string/serial_number" />
                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/edit_text_serial"
                    android:singleLine="true"
                    android:inputType="textCapCharacters"
                    android:width="@dimen/serial_text_size"
                    android:nextFocusDown="@+id/edit_text_comment"
                    android:autofillHints="@string/serial_number" />
            </TableRow>
        </TableLayout>
        <android.support.v7.widget.AppCompatImageButton
            android:id="@+id/photo_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@android:drawable/ic_menu_camera" />
        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:stretchColumns="1">
            <TableRow>
                <android.support.v7.widget.AppCompatTextView
                    android:text="@string/comment" />
                <android.support.v7.widget.AppCompatAutoCompleteTextView
                    android:id="@+id/edit_text_comment"
                    android:singleLine="true"
                    android:imeOptions="actionDone"
                    android:completionThreshold="1" />
            </TableRow>
        </TableLayout>
        <TableLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center">
            <TableRow>
                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/submit_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/submit" />
            </TableRow>
        </TableLayout>
    </LinearLayout>
</ScrollView>
